# motors

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  games.pgn  makefile  rustfmt.toml
.cargo/: config.toml
benches/: perft_bench.rs
gears/: Cargo.toml
gears/benches/: bitbase_bench.rs  perft_bench.rs  setup_test_env.sh
gears/fuzz/: Cargo.toml
gears/fuzz/fuzz_targets/: chess_fen.rs  chess_fen_and_move.rs  chess_moves.rs  chess_parse_move.rs
gears/src/: cli.rs  games.rs  general.rs  lib.rs  output.rs  score.rs  search.rs  ugi.rs
gears/src/games/: ataxx.rs  chess.rs  fairy.rs  generic_tests.rs  mnk.rs  uttt.rs
gears/src/games/ataxx/: board_impl.rs  common.rs  perft_test.rs
gears/src/games/chess/: attack_data.rs  bitbase.rs  castling.rs  flags.rs  movegen.rs  moves.rs  perft_tests.rs  pieces.rs  see.rs  squares.rs  tablebase.rs  unverified.rs  upcomin_repetition.rs  upcoming_repetition.rs  zobrist.rs
gears/src/games/fairy/: algebraic_notation.rs  attacks.rs  chess_tests.rs  config.rs  effects.rs  moves.rs  perft_tests.rs  piece_builder.rs  pieces.rs  rules.rs  tests.rs
gears/src/games/fairy/tests/: atomic_chess_tests.rs  atomic_tests.rs  chess_tests.rs
gears/src/games/uttt/: uttt_square.rs  uttt_tests.rs
gears/src/general/: attacks.rs  bitboards.rs  board.rs  common.rs  hq.rs  move_list.rs  moves.rs  perft.rs  squares.rs  tests.rs
gears/src/output/: chess.rs  engine_state.rs  logger.rs  pgn.rs  pretty.rs  text_output.rs
monitors/: Cargo.toml
monitors/src/: cli.rs  main.rs  play.rs  ui.rs
monitors/src/play/: adjudication.rs  player.rs  run_match.rs  ugi_client.rs  ugi_input.rs
monitors/src/ui/: text_input.rs
motors/: Cargo.toml  Makefile
motors/benches/: bench_caps_bench.rs
motors/fuzz/: Cargo.toml
motors/fuzz/fuzz_targets/: ugi.rs  ugi_chess.rs
motors/src/: cli.rs  eval.rs  io.rs  lib.rs  main.rs  search.rs  ugi_engine.rs
motors/src/eval/: ataxx.rs  chess.rs  fairy.rs  mnk.rs  rand_eval.rs  uttt.rs
motors/src/eval/ataxx/: bate.rs
motors/src/eval/chess/: hce.rs  king_gambot.rs  lite.rs  lite_values.rs  material_only.rs  piston.rs  pst_only.rs
motors/src/eval/mnk/: base.rs  simple_mnk_eval.rs
motors/src/eval/uttt/: lute.rs
motors/src/io/: ascii_art.rs  autocomplete.rs  cli.rs  command.rs  input.rs  ugi_engine.rs  ugi_output.rs
motors/src/search/: chess.rs  generic.rs  human.rs  move_picker.rs  multithreading.rs  spsa_param.rs  statistics.rs  tt.rs
motors/src/search/chess/: caps.rs  caps_values.rs  histories.rs  move_picker.rs
motors/src/search/generic/: gaps.rs  generic_negamax.rs  naive_slow_negamax.rs  proof_number.rs  random_mover.rs
pliers/: Cargo.toml
pliers/src/: eval.rs  gd.rs  lib.rs  load_data.rs  main.rs  plots.rs  trace.rs
pliers/src/eval/: caps_hce_eval.rs  chess.rs
pliers/src/eval/chess/: caps_hce_eval.rs  lite.rs  material_only_eval.rs  piston_eval.rs
rulers/: Cargo.toml
rulers/rulers_derive/: Cargo.toml
rulers/rulers_derive/src/: lib.rs
rulers/src/: command.rs  command_response.rs  engine.rs  lib.rs  main.rs  response.rs
src/: eval.rs  games.rs  general.rs  lib.rs  main.rs  motors.rs  play.rs  search.rs  ui.rs
src/eval/: chess.rs  rand_eval.rs
src/eval/chess/: material_only.rs  pst_only.rs
src/eval/mnk/: simple_mnk_eval.rs
src/games/: chess.rs  mnk.rs
src/games/chess/: flags.rs  movegen.rs  moves.rs  perft_tests.rs  pieces.rs  squares.rs  zobrist.rs
src/general/: bitboards.rs  common.rs  move_list.rs  tests.rs
src/play/: run_match.rs  ugi.rs
src/search/: chess.rs  generic_negamax.rs  human.rs  multithreading.rs  naive_slow_negamax.rs  perft.rs  random_mover.rs  tt.rs
src/search/chess/: caps.rs  negamax.rs
src/ui/: logger.rs  no_graphic.rs  pretty.rs  text_ui.rs
