[workspace]
# Otherwise, cargo complains that the crates use an edition that implies resolver="2", but this still defaults to resolver="1"
resolver = "2"
members = ["motors", "gears", "monitors", "pliers", "gears/fuzz", "motors/fuzz"] # TODO: Also fuzz the other crates
default-members = ["motors"]

[profile.release]
lto = true
panic = "abort"
debug = 1 # useful for profiling, maybe remove this eventually

[profile.bench]
debug = true

[profile.dev]
# dramatically speeds up unit tests
opt-level = 1
