[workspace]
# Otherwise, cargo complains that the crates use an edition that implies resolver="2", but this still defaults to resolver="1"
resolver = "2"
members = ["motors", "gears", "monitors", "pliers", "gears/fuzz", "motors/fuzz"] # TODO: Also fuzz the other crates
default-members = ["motors"]

[workspace.dependencies]
num = "0.4"
rand = "0.10.1"
colored = "3.1"
strum = "0.28"
strum_macros = "0.28"
derive_more = { version = "2.1", features = ["display", "add", "add_assign", "mul", "mul_assign", "not", "from_str", "deref", "deref_mut", "index", "index_mut"] }
itertools = "0.14"
chrono = { version = "0.4", default-features = false, features = ["std", "now"] }
dyn-clone = "1.0"
arrayvec = "0.7"
# don't use the backtrace feature because that makes creating errors much slower
anyhow = { version = "1.0", default-features = false, features = ["std"] }
crossbeam-utils = "0.8"
rayon = "1.12"


[profile.release]
lto = true
panic = "abort"
debug = 1 # useful for profiling, maybe remove this eventually

[profile.bench]
debug = true

[profile.test]
# dramatically speeds up unit tests
opt-level = 1

[profile.perft]
inherits = "release"
debug-assertions = true
