[package]
name = "gears"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "perft_bench"
harness = false

[dev-dependencies]
criterion = "0.5.1"


[dependencies]
num = "0.4.1"
rand = "0.9.0-alpha.2"
# bitintr is bugged and unmaintained
# Technically, crossterm already provides coloring functionality.
# However, colored simply does this a lot better.
colored = "2.1.0"
strum = "0.26.3"
strum_macros = "0.26.4"
derive_more = { version = "1.0.0", features = ["full"] }
itertools = "0.13.0"
chrono = "0.4.38"
static_assertions = "1.1.0"
dyn-clone = "1.0.17"
arrayvec = "0.7.6"
edit-distance = "2.1.3"
arbitrary = { version = "1.3.2", features = ["derive"] }
thiserror = "1.0.64"
anyhow = "1.0.89"
crossterm = "0.28.1"
colorgrad = "0.7.0"
thread_local = "1.1.8"
# removing the regex dependency by replacing the single instance of using a regex improved compile times from ~30 to ~20 seconds

[features]
default = ["chess", "mnk", "ataxx", "uttt", "fairy", "unsafe"]
unsafe = []
chess = []
mnk = []
ataxx = []
uttt = []
fairy = ["chess", "mnk"]
