[package]
name = "gears"
version = "0.1.0"
edition = "2024"

[[bench]]
name = "perft_bench"
harness = false

[dev-dependencies]
criterion = "0.5.1"
proptest = "1.6.0"


[dependencies]
num = "0.4.1"
rand = "0.9"
# bitintr is bugged and unmaintained
# Technically, crossterm already provides coloring functionality.
# However, colored simply does this a lot better.
colored = "3.0.0"
strum = "0.26.3"
strum_macros = "0.26.4"
derive_more = { version = "1.0.0", features = ["full"] }
itertools = "0.14.0"
chrono = "0.4.39"
static_assertions = "1.1.0"
dyn-clone = "1.0.18"
arrayvec = "0.7.6"
edit-distance = "2.1.3"
arbitrary = { version = "1.4.1", features = ["derive"] }
thiserror = "2.0.9"
anyhow = "1.0.95"
crossterm = "0.28.1"
colorgrad = "0.7.0"
rayon = "1.10.0"
# removing the regex dependency by replacing the single instance of using a regex improved compile times from ~30 to ~20 seconds

[features]
default = ["chess", "mnk", "ataxx", "uttt", "fairy", "unsafe"]
unsafe = []
chess = []
mnk = []
ataxx = []
uttt = []
fairy = ["chess", "mnk"]
