[package]
name = "gears"
version = "0.1.0"
edition = "2024"
build = "../build.rs"

[[bench]]
name = "perft_bench"
harness = false

[[bench]]
name = "bitbase_bench"
harness = false

[dev-dependencies]
criterion = "0.8"
proptest = "1.11"


[dependencies]
num = { workspace = true }
rand = { workspace = true }
colored = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
derive_more = { workspace = true }
itertools = { workspace = true }
chrono = { workspace = true }
dyn-clone = { workspace = true }
arrayvec = { workspace = true }
smallvec = "2.0.0-alpha.12"
edit-distance = "2.2"
arbitrary = { version = "1.4.2", features = ["derive"] }
anyhow = { workspace = true }
colorgrad = { version = "0.8", features = ["named-colors"] }
rayon = { workspace = true }
configparser = { version = "3.1", features = ["indexmap"] }
indexmap = "2.14.0"
linkme = { workspace = true }

[features]
default = ["chess", "mnk", "ataxx", "uttt", "fairy", "unsafe"]
unsafe = []
chess = []
mnk = []
ataxx = []
uttt = []
fairy = ["chess", "mnk"]
