[package]
name = "monitors"
version = "0.1.0"
edition = "2021"

[dependencies]
gears = { path = "../gears", default-features = false }

rand = "0.9.0-beta.1"
strum = "0.26.3"
crossbeam-utils = "0.8.21"
dyn-clone = "1.0.17"
itertools = "0.14.0"
whoami = "2.0.0-pre.0"
lazy_static = "1.5.0"
motors = { path = "../motors", optional = true, default-features = false }

[features]
default = ["motors", "motors/generic-engines", "chess", "mnk", "ataxx", "uttt"]
motors = ["dep:motors"]
chess = ["gears/chess", "motors?/chess", "motors?/chess-engines"]
mnk = ["gears/mnk", "motors?/mnk", "motors?/mnk-engines"]
ataxx = ["gears/ataxx", "motors?/ataxx", "motors?/ataxx-engines"]
uttt = ["gears/uttt", "motors?/uttt", "motors?/uttt-engines"]
