[package]
name = "monitors"
version = "0.1.0"
edition = "2024"
build = "../build.rs"

[dependencies]
gears = { path = "../gears", default-features = false }

rand = { workspace = true }
crossbeam-utils = { workspace = true }
dyn-clone = { workspace = true }
itertools = { workspace = true }
whoami = "2.1"
lazy_static = "1.5"
motors = { path = "../motors", optional = true, default-features = false }

[features]
default = ["motors", "motors/generic-engines", "chess", "mnk", "ataxx", "uttt"]
motors = ["dep:motors"]
chess = ["gears/chess", "motors?/chess", "motors?/chess-engines"]
mnk = ["gears/mnk", "motors?/mnk", "motors?/mnk-engines"]
ataxx = ["gears/ataxx", "motors?/ataxx", "motors?/ataxx-engines"]
uttt = ["gears/uttt", "motors?/uttt", "motors?/uttt-engines"]
