[package]
name = "motors"
version = "0.1.0"
authors = ["ToTheAnd"]
edition = "2021"
license = "GPL-3"
description = "A collection of several games and engines"

[[bench]]
name = "bench_caps_bench"
harness = false

[dev-dependencies]
criterion = "0.5.1"

[dependencies]
gears = { path = "../gears", default-features = false }
rand = "0.9.0-alpha.2"
colored = "2.1.0"
strum = "0.26.3"
strum_macros = "0.26.4"
derive_more = { version = "1.0.0", features = ["full"] }
itertools = "0.13.0"
dyn-clone = "1.0.17"
static_assertions = "1.1.0"
# TODO: Remove crossbeam?
crossbeam-channel = "0.5.13"
crossbeam-utils = "0.8.19"
portable-atomic = "1.8.0" # TODO: Remove?
arrayvec = "0.7.6"
threadpool = "1.8.1"
arbitrary = { version = "1.3.2", features = ["derive"] }
thiserror = "1.0.64"

[features]
default = ["unsafe", "chess", "ataxx", "mnk", "uttt", "random_mover", "gaps", "caps"]
random_mover = []
gaps = []
caps = ["chess"] # enabling the caps feature also enables the chess feature
statistics = []
unsafe = []
fuzzing = []
spsa = ["unsafe"] # the implementation uses "unsafe"

generic-engines = ["random_mover", "gaps"]
chess-engines = ["caps"]
mnk-engines = [] # does nothing at the moment
ataxx-engines = [] # does nothing at the moment

chess = ["gears/chess"]
ataxx = ["gears/ataxx"]
mnk = ["gears/mnk"]
uttt = ["gears/uttt"]

[lib]
name = "motors"
path = "src/lib.rs"

[[bin]]
name = "motors"
path = "src/main.rs"
