[package]
name = "motors"
version = "0.1.0"
authors = ["ToTheAnd"]
edition = "2021"
license = "GPL-3"
description = "A collection of several games and engines"

[[bench]]
name = "bench_caps_bench"
harness = false

[dev-dependencies]
criterion = "0.5.1"

[dependencies]
gears = { path = "../gears", default-features = false }
rand = "0.9.0-beta.1"
strum = "0.26.3"
strum_macros = "0.26.4"
derive_more = { version = "1.0.0", features = ["full"] }
itertools = "0.14.0"
dyn-clone = "1.0.17"
static_assertions = "1.1.0"
# TODO: Remove crossbeam?
crossbeam-channel = "0.5.14"
portable-atomic = "1.10.0" # TODO: Remove?
rayon = "1.10.0"
inquire = { version = "0.7.5", features = ["editor"] }
# TODO: Should probably move autocompletion to gears? Then this dependency would be unnecessary
edit-distance = "2.1.3"
indicatif = "0.17.9"
colored = "3.0.0"


[features]
default = ["unsafe", "chess", "ataxx", "mnk", "uttt", "fairy", "random_mover", "gaps", "caps"]
random_mover = []
gaps = []
caps = ["chess"] # enabling the caps feature also enables the chess feature
statistics = []
unsafe = []
fuzzing = []
spsa = ["unsafe"] # the implementation uses "unsafe"

generic-engines = ["random_mover", "gaps"]
chess-engines = ["caps"]
mnk-engines = [] # does nothing at the moment
ataxx-engines = [] # does nothing at the moment
uttt-engines = [] # does nothing at the moment

chess = ["gears/chess"]
ataxx = ["gears/ataxx"]
mnk = ["gears/mnk"]
uttt = ["gears/uttt"]
fairy = ["gears/fairy"]

[lib]
name = "motors"
path = "src/lib.rs"

[[bin]]
name = "motors"
path = "src/main.rs"
