[package]
name = "motors"
version = "0.1.0"
authors = ["ToTheAnd"]
edition = "2024"
license = "GPL-3"
description = "A collection of several games and engines"
build = "../build.rs"

[[bench]]
name = "bench_caps_bench"
harness = false

[dev-dependencies]
criterion = "0.8"
proptest = "1.11"

[dependencies]
gears = { path = "../gears", default-features = false }
strum = { workspace = true }
strum_macros = { workspace = true }
derive_more = { workspace = true }
# TODO: Remove crossbeam?
crossbeam-channel = "0.5.15"
rayon = { workspace = true }
inquire = { version = "0.9", default-features = false, features = ["crossterm", "editor"] }
# TODO: Should probably move autocompletion to gears? Then this dependency would be unnecessary
edit-distance = "2.2"
indicatif = { version = "0.18", default-features = false, features = ["unicode-width"] }
libc = "1.0.0-alpha.3"


[features]
default = ["unsafe", "chess", "ataxx", "mnk", "uttt", "fairy", "proof_number", "gaps", "caps"]
# the random mover is always enabled, there's no real reason to disable it
proof_number = []
gaps = []
caps = ["chess"] # enabling the caps feature also enables the chess feature
statistics = []
unsafe = ["gears/unsafe"]
fuzzing = []
spsa = ["unsafe"] # the implementation uses "unsafe"

generic-engines = ["gaps"]
chess-engines = ["caps"]
mnk-engines = [] # does nothing at the moment
ataxx-engines = [] # does nothing at the moment
uttt-engines = [] # does nothing at the moment

chess = ["gears/chess"]
ataxx = ["gears/ataxx"]
mnk = ["gears/mnk"]
uttt = ["gears/uttt"]
fairy = ["gears/fairy"]

[lib]
name = "motors"
path = "src/lib.rs"

[[bin]]
name = "motors"
path = "src/main.rs"
