[package]
name = "pliers"
version = "0.9.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gears = { path = "../gears" }
motors = { path = "../motors" }
derive_more = "1.0.0-beta.6"
rand = "0.8.5"
strum = "0.26.2"
strum_macros = "0.26.2"
rayon = "1.10.0"
serde_json = "1.0.117"
serde = { version = "1.0.197", features = ["derive"] }

[features]
# Saves space when using tapered datapoints but makes the tuner slower
save_space = []
default = []
