[package]
name = "pliers"
version = "0.9.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gears = { path = "../gears" }
motors = { path = "../motors" }
derive_more = "2.0"
rand = "0.9.0-beta.1"
strum = "0.27"
strum_macros = "0.27"
rayon = "1.10.0"
serde_json = "1.0.139"
serde = { version = "1.0.218", features = ["derive"] }

[features]
# Saves space when using tapered datapoints but makes the tuner slower
save_space = []
default = []
