[package]
name = "pliers"
version = "0.9.0"
edition = "2024"
build = "../build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gears = { path = "../gears", default-features = false, features = ["chess", "unsafe"] }
motors = { path = "../motors", default-features = false, features = ["chess", "unsafe"] }
derive_more = { workspace = true }
rand = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
rayon = { workspace = true }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[features]
# Saves space when using tapered datapoints but makes the tuner slower
save_space = []
default = []
