[package]
name = "motors-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.motors]
path = ".."

[dependencies.gears]
path = "../../gears"

[features]
default = ["fuzzing"]
fuzzing = ["motors/fuzzing"]

[[bin]]
name = "ugi"
path = "fuzz_targets/ugi.rs"
test = false
doc = false
bench = false
